--- a/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
@@ -8,6 +8,13 @@
 			margin-left: 10px;
 			right: 0;
 			color: map-get($context--colors, medium-blue);
+			&:focus {
+				outline: thin dotted; // button focus ouline
+			}
+			&:hover,
+			&:focus  {
+				text-decoration: underline; // text underline on hover
+			}
 
 			&.open {
 				@include arrow(map-get($context--colors, medium-blue), up, 4px);
@@ -26,6 +33,8 @@
 		&__content-item {
 			padding: 0 12px;
 			font-size: 12px;
+			line-height: 1.76; // added Line-height
+			letter-spacing: 0.14px; // added letter-spacing
 		}
 
 		&__link {
@@ -36,5 +45,6 @@
 				color: map-get($context--colors, white);
 			}
 		}
+		
 	}
 }
