--- a/toolkits/global/packages/global-author-list/demo/index.hbs
+++ b/toolkits/global/packages/global-author-list/demo/index.hbs
@@ -8,8 +8,14 @@
 
 <h2>Enhance with a toggle button which expands/truncates the list</h2>
 <div data-author-list>
-	<h3>Authors</h3>
+	<h3 data-author-list-heading>Authors</h3>
 	<ul class="c-author-list {{#if isTruncated}}c-author-list--truncated{{/if}} {{#if isCompact}}c-author-list--compact{{/if}}">
 		{{#each authors}}<li class="c-author-list__item">{{this}}</li>{{/each}}
 	</ul>
 </div>
+
+<script>
+	// JS Detection Script
+	(function (e) { var t = e.documentElement, n = e.implementation; t.className = 'js'; })(document)
+</script>
+
