[MC] Add mentions about icons + add icon to demo

--- a/toolkits/global/packages/global-author-list/demo/index.hbs
+++ b/toolkits/global/packages/global-author-list/demo/index.hbs
@@ -19,3 +19,7 @@
 	(function (e) { var t = e.documentElement, n = e.implementation; t.className = 'js'; })(document)
 </script>
 
+<svg xmlns="http://www.w3.org/2000/svg">
+	<symbol id="icon-plus" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M2 7h5V2c0-.552.444-1 1-1 .552 0 1 .445 1 1v5h5c.552 0 1 .444 1 1 0 .552-.445 1-1 1H9v5c0 .552-.444 1-1 1-.552 0-1-.445-1-1V9H2c-.552 0-1-.444-1-1 0-.552.445-1 1-1z"/></symbol>
+	<symbol id="icon-minus" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M2 7h12c.552 0 1 .444 1 1 0 .552-.445 1-1 1H2c-.552 0-1-.444-1-1 0-.552.445-1 1-1z"/></symbol>
+</svg>
