[NM,MC,AK] Add enhanced version of global-author-list (#586)
*JS for author list component

* Make the demo work

* Update README to include enhanced version

--- a/toolkits/global/packages/global-author-list/demo/index.hbs
+++ b/toolkits/global/packages/global-author-list/demo/index.hbs
@@ -1,3 +1,25 @@
+
+<h1>Author List examples</h1>
+
+<h2>Display a styled list of authors with comma separation</h2>
 <ul class="c-author-list {{#if isTruncated}}c-author-list--truncated{{/if}} {{#if isCompact}}c-author-list--compact{{/if}}">
 	{{#each authors}}<li class="c-author-list__item">{{this}}</li>{{/each}}
 </ul>
+
+<h2>Enhance with a toggle button which expands/truncates the list</h2>
+<div data-author-list>
+	<h3 data-author-list-heading>Authors</h3>
+	<ul class="c-author-list {{#if isTruncated}}c-author-list--truncated{{/if}} {{#if isCompact}}c-author-list--compact{{/if}}">
+		{{#each authors}}<li class="c-author-list__item">{{this}}</li>{{/each}}
+	</ul>
+</div>
+
+<script>
+	// JS Detection Script
+	(function (e) { var t = e.documentElement, n = e.implementation; t.className = 'js'; })(document)
+</script>
+
+<svg xmlns="http://www.w3.org/2000/svg">
+	<symbol id="icon-plus" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M2 7h5V2c0-.552.444-1 1-1 .552 0 1 .445 1 1v5h5c.552 0 1 .444 1 1 0 .552-.445 1-1 1H9v5c0 .552-.444 1-1 1-.552 0-1-.445-1-1V9H2c-.552 0-1-.444-1-1 0-.552.445-1 1-1z"/></symbol>
+	<symbol id="icon-minus" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M2 7h12c.552 0 1 .444 1 1 0 .552-.445 1-1 1H2c-.552 0-1-.444-1-1 0-.552.445-1 1-1z"/></symbol>
+</svg>
