--- a/toolkits/global/packages/global-pill/demo/index.hbs
+++ b/toolkits/global/packages/global-pill/demo/index.hbs
@@ -1,7 +1,7 @@
 <ul>
 	{{#each pills}}
     <li>
-        <a href="{{url}}" class="c-pill">{{label}}</a>
+        <a href="{{pillUrl}}" class="c-pill">{{label}}</a>
     </li>
 	{{/each}}
 </ul>
