--- a/toolkits/springer/packages/springer-user-metadata/demo/index.hbs
+++ b/toolkits/springer/packages/springer-user-metadata/demo/index.hbs
@@ -12,7 +12,7 @@
 	{{/if}}
 	{{#each data}}
 	<p class="c-user-metadata__item" {{#if lang}}lang="{{lang}}" {{/if}}>
-		{{#if url}}<a href="{{url}}" class="u-link-inherit">{{/if}}
+		{{#if dataUrl}}<a href="{{dataUrl}}" class="u-link-inherit">{{/if}}
 			{{text}}
 			{{#if url}}</a>{{/if}}
 	</p>
