--- a/toolkits/global/packages/global-breadcrumbs/demo/index.hbs
+++ b/toolkits/global/packages/global-breadcrumbs/demo/index.hbs
@@ -1,7 +1,7 @@
 <ul class="c-breadcrumbs">
 	{{#each crumbs}}
 		<li class="c-breadcrumbs__item">
-			<a href="{{url}}">{{label}}</a>
+			<a href="{{crumbUrl}}">{{label}}</a>
 			<svg class="c-breadcrumbs__chevron" width="12" height="12" aria-hidden="true" focusable="false">
 				<use xlink:href="{{../chevronURL}}"></use>
 			</svg>
