--- a/toolkits/springer/packages/springer-media/demo/index.hbs
+++ b/toolkits/springer/packages/springer-media/demo/index.hbs
@@ -4,7 +4,7 @@
 	{{/with}}
 	<div class="c-media__body">
 		<h4 class="c-media__title u-text-lg" aria-level="{{level}}">
-			<a href="{{url}}">{{title}}</a>
+			<a href="{{mediaUrl}}">{{title}}</a>
 		</h4>
 		{{#if text}}
 		<p>{{text}}</p>
