--- a/toolkits/springer/packages/springer-header/view/index.hbs
+++ b/toolkits/springer/packages/springer-header/view/index.hbs
@@ -10,7 +10,7 @@
 		<div class="c-header__navigation">
 			{{#if search}}
 			<a href="{{searchUrl}}" class="c-header__link c-header__link--search">
-				<span class="u-flex u-flex-align-center">
+				<span class="u-display-flex u-flex-align-center">
 					Search
 					<svg class="c-icon u-margin-left-xs" width="14" height="14" aria-hidden="true" focusable="false">
 						<use xlink:href="#icon-search"></use>
