update default styling add nature settings

--- a/toolkits/global/packages/global-dropdown/demo/main.scss
+++ b/toolkits/global/packages/global-dropdown/demo/main.scss
@@ -1,2 +1,5 @@
-@import '../scss/10-settings/default';
+@import '../node_modules/@springernature/brand-context/default/scss/core.scss';
+@import '../node_modules/@springernature/brand-context/default/scss/enhanced.scss';
+
+@import '../scss/10-settings/nature';
 @import '../scss/50-components/dropdown';
