--- a/toolkits/global/packages/global-dropdown/scss/10-settings/nature.scss
+++ b/toolkits/global/packages/global-dropdown/scss/10-settings/nature.scss
@@ -19,9 +19,9 @@ $dropdown--button-border-radius: 3px;
 $dropdown--button-color: black;
 $dropdown--button-focus-color: #fece3e;
 
-$dropdown--menu-background-color: #1A1919;
+$dropdown--menu-background-color: #1a1919;
 $dropdown--menu-border-radius: 3px;
-$dropdown--menu-box-shadow: 0 0 5px 0 #1A1919;
+$dropdown--menu-box-shadow: 0 0 5px 0 #1a1919;
 
 $dropdown__menu-link-color: white;
 $dropdown__menu-link-hover-background-color: #536179;
