update readme use default settings in the demo update markup

--- a/toolkits/global/packages/global-dropdown/view/dropdown.hbs
+++ b/toolkits/global/packages/global-dropdown/view/dropdown.hbs
@@ -9,9 +9,9 @@
 			{{/with}}
 		</button>
 		<ul class="c-dropdown__menu">
-			<li><a data-dropdown-item download href="#" class="c-dropdown__link">Option 1</a></li>
-			<li><a data-dropdown-item download href="#" class="c-dropdown__link">Option 2</a></li>
-			<li><a data-dropdown-item download href="#" class="c-dropdown__link">Option 3</a></li>
+			<li><a data-dropdown-item href="#" class="c-dropdown__link">Option 1</a></li>
+			<li><a data-dropdown-item href="#" class="c-dropdown__link">Option 2</a></li>
+			<li><a data-dropdown-item href="#" class="c-dropdown__link">Option 3</a></li>
 		</ul>
 	</div>
 </div>
