core browser margin fallback

--- a/toolkits/global/packages/global-layout-stack/scss/50-components/layout-stack.scss
+++ b/toolkits/global/packages/global-layout-stack/scss/50-components/layout-stack.scss
@@ -3,6 +3,7 @@
 }
 
 .l-stack > * + * {
+	margin-top: $stack--gap; /* ← core browser fallback */
 	margin-top: var(--stack--gap, #{$stack--gap});
 }
 
