--- a/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
+++ b/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
@@ -1,18 +1,19 @@
+@use 'sass:math';
 /* Input row component */
 
 .c-input-row {
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: row;
-	margin-right: -$global-form--grid-gutter-width / 2;
-	margin-left: -$global-form--grid-gutter-width / 2;
+	margin-right:  math.div(-$global-form--grid-gutter-width, 2);
+	margin-left:  math.div(-$global-form--grid-gutter-width, 2);
 }
 
 .c-input-row__item {
 	align-self: stretch;
 	flex: 1 1 auto;
-	padding-right: $global-form--grid-gutter-width / 2;
-	padding-left:  $global-form--grid-gutter-width / 2;
+	padding-right:  math.div($global-form--grid-gutter-width, 2);
+	padding-left:   math.div($global-form--grid-gutter-width, 2);
 }
 
 /* Input group component */
