minor tweaks to handle ellipsis in the button min-width for menu from a small given breakpoint

--- a/toolkits/global/packages/global-dropdown/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-dropdown/scss/10-settings/default.scss
@@ -26,8 +26,8 @@ $dropdown--button-focus-color: #fece3e;
 $dropdown--menu-background-color: white;
 $dropdown--menu-border-radius: 3px;
 $dropdown--menu-box-shadow: 0 0 5px 0 #ccc;
+$dropdown--menu-min-width: 290px;
 
 $dropdown__menu-link-color: black;
 $dropdown__menu-link-hover-background-color: #29303c;
 $dropdown__menu-link-hover-color: white;
-
