--- a/toolkits/global/packages/global-dropdown/scss/50-components/dropdown.scss
+++ b/toolkits/global/packages/global-dropdown/scss/50-components/dropdown.scss
@@ -112,5 +112,6 @@
 	vertical-align: middle;
 	margin-left: $dropdown--spacing-large;
 	transform: translateY(6%);
+	font-size: $dropdown__icon-size;
 	flex: 0 0 auto;
 }
