--- a/context/brand-context/default/scss/20-functions/colors.scss
+++ b/context/brand-context/default/scss/20-functions/colors.scss
@@ -30,7 +30,7 @@
 	$v2: if(length($keys) > 1, nth($keys, 2), null);
 	$map: if(type-of($v1) == 'map', $v1, $context--colors);
 	$opacity: if(type-of($v1) == 'number', $v1, $v2);
-	$opacity: if($opacity, round($opacity * 10) / 10, 1); // round to one decimal place
+	$opacity: if($opacity, math.div(round($opacity * 10), 10), 1); // round to one decimal place
 
 	@if length($keys) > 2 {
 		@warn 'the `color` function expects a maximum of 2 optional arguments, #{length($keys)} found.';
