--- a/toolkits/global/packages/global-card/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/default.scss
@@ -8,12 +8,13 @@ $card--font-family: inherit;
 $card--font-size: 1.4rem;
 $card--spacing: $card--gutter / 2;
 $card--padding: $card--gutter;
-$card--padding-x: 24px 0;
+$card--padding-x: 0;
 $card--background: transparent;
 $card--title-spacing: $card--spacing;
 $card--title-font-weight: $context--font-weight-normal;
 $card--title-heading: h4;
 $card--title-letter-spacing: normal;
+$card--image-aspect-ratio: 16 / 9;
 
 // --major
 $card--major-font-size: 1.6rem;
