--- a/toolkits/global/packages/global-card/scss/50-components/card.scss
+++ b/toolkits/global/packages/global-card/scss/50-components/card.scss
@@ -14,15 +14,38 @@
 }
 
 .c-card__image {
-	display: block;
-	margin-bottom: $card--padding;
 	flex: 0 1 auto;
-	width: 100%;
+	position: relative;
+	display: flex;
+	// Center image horizontally
+	// (may cause overflow — not a problem)
+	justify-content: center;
+	overflow: hidden;
+	// 16:9 aspect ratio fallback
+	padding-bottom: 56.25%;
+	@supports (aspect-ratio: 1 / 1) {
+		padding-bottom: 0;
+		// Customizable aspect ratio
+		aspect-ratio: var(--card--image-aspect-ratio, #{$card--image-aspect-ratio});
+	}
 
 	// Not direct child due to picture element usage
 	img {
-		vertical-align: middle;
-		width: 100%;
+		position: absolute;
+		max-width: unset;
+		// Maintain aspect ratio but overflow container
+		// possibly in both dimensions
+		min-width: 100%;
+		min-height: 100%;
+		transform: translateY(-50%);
+		@supports (object-fit: cover) {
+			width: 100%;
+			height: 100%;
+			transform: unset;
+			// Maintain aspect ratio
+			// but only overflow in on dimension
+			object-fit: cover;
+		}
 	}
 }
 
