remove top margin from title where it exists

--- a/toolkits/global/packages/global-card/scss/50-components/card.scss
+++ b/toolkits/global/packages/global-card/scss/50-components/card.scss
@@ -59,6 +59,7 @@
 	@if $card--title-font-weight != null {
 		font-weight: $card--title-font-weight;
 	}
+	margin-top: 0;
 	margin-bottom: $card--spacing;
 	letter-spacing: $card--title-letter-spacing;
 }
