using var with fallback

--- a/toolkits/global/packages/global-layout-grid/scss/50-components/layout-grid.scss
+++ b/toolkits/global/packages/global-layout-grid/scss/50-components/layout-grid.scss
@@ -17,6 +17,6 @@
 		display: grid;
 		gap: $grid--gap;
 		gap: var(--grid--gap, #{$grid--gap});
-		grid-template-columns: repeat(auto-fit, minmax(#{$grid--basis}, 1fr));
+		grid-template-columns: repeat(auto-fit, minmax(var(--grid--basis, #{$grid--basis}), 1fr));
 	}
 }
