--- a/toolkits/global/packages/global-dropdown/view/dropdown.hbs
+++ b/toolkits/global/packages/global-dropdown/view/dropdown.hbs
@@ -3,7 +3,7 @@
 	<button aria-expanded="false" class="c-dropdown__button" data-dropdown>
 		<span>Dropdown</span>
 		{{#with iconURL}}
-			<svg class="c-dropdown__icon" role="img" aria-hidden="true" focusable="false" height="10" viewBox="0 0 10 10" width="10">
+			<svg class="c-dropdown__icon" role="img" aria-hidden="true" focusable="false" height="10" width="10">
 				<use xlink:href="{{{this}}}"></use>
 			</svg>
 		{{/with}}
