springer card settings

--- a/toolkits/global/packages/global-card/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/default.scss
@@ -4,6 +4,8 @@
  */
 
 $card--gutter: 16px;
+$card--border: none;
+$card--box-shadow: none;
 $card--font-family: inherit;
 $card--font-size: 1.4rem;
 $card--spacing: $card--gutter / 2;
