--- a/toolkits/global/packages/global-layout-with-sidebar/scss/50-components/layout-with-sidebar.scss
+++ b/toolkits/global/packages/global-layout-with-sidebar/scss/50-components/layout-with-sidebar.scss
@@ -3,6 +3,11 @@
 	flex-wrap: wrap;
 }
 
+.l-with-sidebar > * {
+	// Sidebar children should not retain margin
+	margin: 0;
+}
+
 .l-with-sidebar__sidebar {
 	flex-grow: 1;
 	flex-basis: $with-sidebar--basis; /* fallback static value for IE */
