--- a/toolkits/springer/packages/springer-header/scss/50-components/_header.scss
+++ b/toolkits/springer/packages/springer-header/scss/50-components/_header.scss
@@ -8,48 +8,48 @@
 	border-bottom: 4px solid color('corporate');
 }
 
-.c-header__container {
-	@include u-container;
+.c-header__container,
+.c-header__menu,
+.c-header__nav-menu {
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
-}
-
-.c-header__brand {
-	margin-right: $header--brand-spacing;
-
-	a,
-	a:visited,
-	a:hover,
-	a:active {
-		text-decoration: none;
+	flex-wrap: wrap;
+	@supports (gap: 2em) {
+		gap: 2em;
 	}
 }
 
-.c-header__qualifier {
-	margin-left: spacing(24);
-
-	@include media-query(sm, max) {
-		display: none;
-	}
-}
-
-.c-header__navigation {
-	display: flex;
-	align-items: center;
-}
-
-.c-header__menu {
+.c-header__menu,
+.c-header__nav-menu {
 	@include u-list-reset;
-	display: flex;
 }
 
 .c-header__item {
 	color: $header--item-color;
-	margin-right: spacing(24);
+	@supports not (gap: 2em) {
+		margin-left: spacing(24);
+	}
+}
 
-	&:last-child {
-		margin-right: 0;
+.c-header__nav .c-header__item {
+	@supports not (gap: 2em) {
+		margin-left: 0;
+		margin-right: spacing(24);
+	}
+}
+
+.c-header__container {
+	@include u-container;
+	justify-content: space-between;
+}
+
+.c-header__brand {
+	@supports not (gap: 2em) {
+		margin-right: $header--brand-spacing;
+	}
+
+	a {
+		text-decoration: none;
 	}
 }
 
@@ -66,16 +66,16 @@
 	}
 }
 
-.c-header__link--search {
-	display: block; // needed for ie10 otherwise the margin-right doesn't get applied correctly
-	background: transparent;
-	border: none;
-	margin: 0 spacing(24) 0 0;
+.c-header__link--nav {
+	font-weight: bold;
 }
 
-/**
- * Added with JavaScript via header-menu.js
- */
-.c-header__menu-button {
-	@include u-button-reset;
+.c-header__nav {
+	border-top: 1px solid greyscale(80);
+	margin-top: spacing(16);
+	padding-top: spacing(16);
+}
+
+.c-header__nav-menu {
+	@include u-container;
 }
