add settings for width and height on icon

--- a/toolkits/global/packages/global-status-message/scss/50-components/status-message.scss
+++ b/toolkits/global/packages/global-status-message/scss/50-components/status-message.scss
@@ -30,6 +30,8 @@
 	@include u-icon;
 	flex: 0 0 auto;
 	margin-right: $status-message--gutter-icon;
+	height: $status-message--icon-height;
+	width: $status-message--icon-width;
 }
 
 .c-status-message__icon--top {
