--- a/context/brand-context/default/scss/30-mixins/icons.scss
+++ b/context/brand-context/default/scss/30-mixins/icons.scss
@@ -1,8 +1,8 @@
-@mixin u-icon {
+@mixin u-icon ($width: 1em, $height: 1em) {
 	fill: currentColor;
 	transform: translate(0, 0); // Hack to allow for subpixel rendering
 	display: inline-block;
 	vertical-align: text-top;
-	width: 1em; // Fit icons to surrounding text
-	height: 1em; // (continued)
+	width: $width; // Fit icons to surrounding text
+	height: $height; // (continued)
 }
