pass sizes to mixin

--- a/toolkits/global/packages/global-status-message/scss/50-components/status-message.scss
+++ b/toolkits/global/packages/global-status-message/scss/50-components/status-message.scss
@@ -27,11 +27,9 @@
 }
 
 .c-status-message__icon {
-	@include u-icon;
+	@include u-icon($status-message--icon-size, $status-message--icon-size);
 	flex: 0 0 auto;
 	margin-right: $status-message--gutter-icon;
-	height: $status-message--icon-size;
-	width: $status-message--icon-size;
 }
 
 .c-status-message__icon--top {
