creates default font size variable for HTML element

--- a/context/brand-context/default/scss/10-settings/typography.scss
+++ b/context/brand-context/default/scss/10-settings/typography.scss
@@ -13,6 +13,8 @@ $context--font-weight-bold: 700;
 $context--line-height-base: 1.61803398875; // golden ratio
 $context--line-height-tight: 1.4;
 
+$context--font-size-default: 100%;
+
 // Define your base size in EMs
 // http://stackoverflow.com/questions/20099844/chrome-not-respecting-rem-font-size-on-body-tag
 $context--font-size-base: 1.8em;
