--- a/context/brand-context/default/scss/10-settings/buttons.scss
+++ b/context/brand-context/default/scss/10-settings/buttons.scss
@@ -11,10 +11,10 @@
 $context--button-border-width-style: 1px solid;
 $context--button-line-height: 1.3;
 $context--button-font-family: sans-serif;
-$context--button-font-size-xsmall: 1.4rem;
-$context--button-font-size-small: 1.4rem;
-$context--button-font-size-normal: 1.6rem;
-$context--button-font-size-large: 1.8rem;
+$context--button-font-size-xsmall: .875rem;
+$context--button-font-size-small: .875rem;
+$context--button-font-size-normal: 1rem;
+$context--button-font-size-large: 1.125rem;
 $context--button-icon-margin: spacing(8);
 $context--button-padding: spacing(8);
 $context--button-padding-xsmall: spacing(2);
