--- a/toolkits/springer/packages/springer-media/demo/index.hbs
+++ b/toolkits/springer/packages/springer-media/demo/index.hbs
@@ -1,1 +1,14 @@
-{{> media }}
+<ul>
+	{{! Set context for data to show image on left }}
+	{{#with lhs}}
+	{{> media }}
+	{{/with}}
+
+	{{! Set context for data to show image on right }}
+	{{#with rhs}}
+	{{> media }}
+	{{/with}}
+
+	{{! Set context for data to not show image }}
+	{{> media }}
+</ul>
