--- a/context/brand-context/springer/scss/40-base/layout.scss
+++ b/context/brand-context/springer/scss/40-base/layout.scss
@@ -7,7 +7,7 @@ html {
 	font-family: $context--font-family-sans;
 	height: 100%;
 	overflow-y: scroll;
-	font-size: 62.5%;
+	font-size: $context--font-size-default;
 	box-sizing: border-box;
 	color: greyscale($context--greyscale-min);
 	line-height: $context--line-height-base;
