updates springer nature context font-size

--- a/context/brand-context/springernature/scss/10-settings/buttons.scss
+++ b/context/brand-context/springernature/scss/10-settings/buttons.scss
@@ -7,7 +7,7 @@
 
 $context--button-border-radius: 32px;
 $context--button-border-width-style: 4px solid;
-$context--button-font-size-normal: 1.4rem;
+$context--button-font-size-normal: .875rem;
 $context--button-padding: 16px 32px;
 $context--button-padding-xsmall: 2px 8px;
 $context--button-padding-small: 8px 16px;
