--- a/context/brand-context/springernature/scss/10-settings/links.scss
+++ b/context/brand-context/springernature/scss/10-settings/links.scss
@@ -7,4 +7,4 @@ $context--link-text-font-sizes: (
 	'medium': $context--font-size-md,
 	'large': $context--font-size-lg
 );
-$context--link-text-line-height: 2.4rem;
+$context--link-text-line-height: 1.6;
