updates global package font-sizes

--- a/toolkits/global/packages/global-ad/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-ad/scss/10-settings/default.scss
@@ -5,7 +5,7 @@
  */
 
 $ad--font-family: $context--font-family-sans;
-$ad--font-size: 1.4rem;
+$ad--font-size: .875rem;
 $ad--font-weight: normal;
 $ad--label-margin-bottom: spacing(4);
 $ad--label-color: #333;
