--- a/toolkits/global/packages/global-autocomplete/scss/50-components/autocomplete.scss
+++ b/toolkits/global/packages/global-autocomplete/scss/50-components/autocomplete.scss
@@ -2,7 +2,7 @@
 	margin: 10px auto 0;
 	width: 380px;
 	height: 50px;
-	font-size: 20px;
+	font-size: 1.25rem;
 	border: 1px solid $autocomplete--border-color;
 	padding: 5px 10px 5px 0;
 	text-indent: 15px;
