--- a/toolkits/global/packages/global-banner/scss/10-settings/_default.scss
+++ b/toolkits/global/packages/global-banner/scss/10-settings/_default.scss
@@ -7,8 +7,8 @@
 $banner--padding-y: 12px;
 $banner--padding-x: 12px;
 $banner--font: $context--font-family-sans;
-$banner--font-size: 16px;
-$banner--font-size-small: 14px;
+$banner--font-size: 1rem;
+$banner--font-size-small: .875rem;
 $banner--link-color: gray;
 $banner--background-color: white;
 $banner--border: 1px solid lightgray;
