--- a/toolkits/global/packages/global-banner/scss/10-settings/_nature.scss
+++ b/toolkits/global/packages/global-banner/scss/10-settings/_nature.scss
@@ -9,8 +9,8 @@
 $banner--padding-y: spacing(8);
 $banner--padding-x: spacing(24);
 $banner--border: 0;
-$banner--font-size: 1.6rem;
-$banner--font-size-small: 1.4rem;
+$banner--font-size: 1rem;
+$banner--font-size-small: .875rem;
 $banner--link-color: greyscale(25);
 $banner--compact-padding-y: spacing(4);
 $banner--compact-padding-x: spacing(4);
