--- a/toolkits/global/packages/global-banner/scss/10-settings/_springer.scss
+++ b/toolkits/global/packages/global-banner/scss/10-settings/_springer.scss
@@ -8,8 +8,8 @@
 
 $banner--padding-y: spacing(16);
 $banner--padding-y-compact: spacing(4);
-$banner--font-size: 1.6rem;
-$banner--font-size-small: 1.4rem;
+$banner--font-size: 1rem;
+$banner--font-size-small: .875em;
 $banner--link-color: color('action-base');
 $banner--background-color: color('action-background-light');
 $banner--border: 1px solid color('corporate-light');
