--- a/toolkits/global/packages/global-card/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/default.scss
@@ -7,7 +7,7 @@ $card--gutter: 16px;
 $card--border: none;
 $card--box-shadow: none;
 $card--font-family: inherit;
-$card--font-size: 1.4rem;
+$card--font-size: .875rem;
 $card--spacing: $card--gutter / 2;
 $card--padding: $card--gutter;
 $card--padding-x: 0;
@@ -19,7 +19,7 @@ $card--title-letter-spacing: normal;
 $card--image-aspect-ratio: 16 / 9;
 
 // --major
-$card--major-font-size: 1.6rem;
+$card--major-font-size: 1rem;
 $card--major-title-heading: h2;
 
 // --dark
