--- a/toolkits/global/packages/global-dropdown/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-dropdown/scss/10-settings/default.scss
@@ -13,9 +13,9 @@ $dropdown--spacing-small: spacing(8);
 $dropdown--spacing-medium: spacing(16);
 $dropdown--spacing-large: spacing(24);
 
-$dropdown--font-size-x-small: 1.2rem;
-$dropdown--font-size-small: 1.4rem;
-$dropdown--font-size: 1.6rem;
+$dropdown--font-size-x-small: .75rem;
+$dropdown--font-size-small: .875rem;
+$dropdown--font-size: 1rem;
 $dropdown--font-weight: 700;
 
 $dropdown--button-color: black;
