--- a/toolkits/global/packages/global-facet/scss/10-settings/nature.scss
+++ b/toolkits/global/packages/global-facet/scss/10-settings/nature.scss
@@ -10,8 +10,8 @@
 $facet--background-color: greyscale(80);
 $facet--color: black;
 $facet--font-bold: $context--font-weight-bold;
-$facet--font-size-small: 1.4rem;
-$facet--font-size: 1.6rem;
+$facet--font-size-small: .875rem;
+$facet--font-size: 1rem;
 $facet--spacing-x-small: spacing(4);
 $facet--spacing-small: spacing(8);
 $facet--spacing-normal: spacing(16);
