--- a/toolkits/global/packages/global-breadcrumbs/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-breadcrumbs/scss/10-settings/default.scss
@@ -1,5 +1,5 @@
 $breadcrumbs-font-family: $context--font-family-sans;
-$breadcrumbs-font-size: 16px;
+$breadcrumbs-font-size: 1rem;
 $breadcrumbs-color: black;
 $breadcrumbs-link-color: greyscale(40);
 $breadcrumbs-chevron-spacing: spacing(4) spacing(4) 0;
