--- a/toolkits/global/packages/global-forms/scss/10-settings/_default.scss
+++ b/toolkits/global/packages/global-forms/scss/10-settings/_default.scss
@@ -10,7 +10,7 @@ $global-form--border-radius: 3px;
 $global-form--background-color: #fff;
 $global-form--background-color-disabled: #f3f2ef;
 $global-form--border-color-disabled:  #c7c4bf;
-$global-form--font-size: 18px;
+$global-form--font-size: 1.125rem;
 $global-form--label-font-size: $global-form--font-size / 1.3;
 $global-form--label-spacing: 10px;
 $global-form--color: #000;
