--- a/toolkits/global/packages/global-meta/scss/10-settings/_default.scss
+++ b/toolkits/global/packages/global-meta/scss/10-settings/_default.scss
@@ -3,8 +3,8 @@
  * Default branding for component
  */
 
-$meta--font-size: 14px;
-$meta--font-size-large: 16px;
+$meta--font-size: .8rem;
+$meta--font-size-large: 1rem;
 $meta--font-family: inherit;
 $meta--line-height: inherit;
 $meta--keyline-spacing: 8px;
