--- a/toolkits/global/packages/global-skip-link/scss/10-settings/_default.scss
+++ b/toolkits/global/packages/global-skip-link/scss/10-settings/_default.scss
@@ -6,7 +6,7 @@
 
 $skip-link--padding-y: 8px;
 $skip-link--font: $context--font-family-sans;
-$skip-link--font-size: 16px;
+$skip-link--font-size: 1rem;
 $skip-link--color: white;
 $skip-link--hover-color: white;
 $skip-link--background-color: gray;
