updates springer nature  package font-sizes

--- a/toolkits/springernature/packages/springernature-forms/scss/10-settings/_forms.scss
+++ b/toolkits/springernature/packages/springernature-forms/scss/10-settings/_forms.scss
@@ -8,7 +8,7 @@ $forms--input-border-radius: 3px;
 $forms--label-text-margin-bottom: spacing(4);
 $forms--hint-margin-bottom: spacing(8);
 $forms--hint-color: #666;
-$forms--font-size: 18px;
+$forms--font-size: 1.125rem;
 $forms--heading-margin-bottom: spacing(32);
 $forms--subheading-margin-bottom: spacing(8);
 
