--- a/toolkits/springernature/packages/springernature-submission-header/scss/50-components/core.scss
+++ b/toolkits/springernature/packages/springernature-submission-header/scss/50-components/core.scss
@@ -1,6 +1,5 @@
 .c-submission-details-header {
-	font-size: 12px;
-	font-size: 0.75em;
+	font-size: .75rem;
 	margin: 0 0 20px 0;
 	background: #fff;
 	padding: 20px;
