--- a/toolkits/springernature/packages/springernature-modal/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-modal/scss/50-components/enhanced.scss
@@ -70,7 +70,7 @@
 		color: #fff;
 		cursor: pointer;
 		font-family: inherit;
-		font-size: 32px;
+		font-size: 2rem;
 		font-weight: inherit;
 		height: 24px;
 		line-height: 24px;
