--- a/context/brand-context/springer/scss/abstracts.scss
+++ b/context/brand-context/springer/scss/abstracts.scss
@@ -9,6 +9,7 @@
 @import '10-settings/style';
 @import '10-settings/typography';
 @import '10-settings/buttons';
+@import '10-settings/keyframes';
 
 @import '20-functions/em';
 @import '20-functions/strip-unit';
