Use new images in demo functionality (#624)
* update frontend-package-manager

* add image to springer-media

* update springer-media to use demo image

* update example with option for rhs media

* demo shows multiple options

* springer-media v5.0.0

* update package manager

* update config to allow images in demo folders

* update packages with images in demos

* new versions to handle demo images

* breaking change not new feature

--- a/toolkits/springer/packages/springer-media/demo/index.hbs
+++ b/toolkits/springer/packages/springer-media/demo/index.hbs
@@ -1,13 +1,14 @@
-<li class="c-media">
-	{{#with image}}
-	<img src="{{src}}" class="c-media__figure" alt="{{alt}}">
+<ul>
+	{{! Set context for data to show image on left }}
+	{{#with lhs}}
+	{{> media }}
 	{{/with}}
-	<div class="c-media__body">
-		<h4 class="c-media__title u-text-lg" aria-level="{{level}}">
-			<a href="{{mediaUrl}}">{{title}}</a>
-		</h4>
-		{{#if text}}
-		<p>{{text}}</p>
-		{{/if}}
-	</div>
-</li>
+
+	{{! Set context for data to show image on right }}
+	{{#with rhs}}
+	{{> media }}
+	{{/with}}
+
+	{{! Set context for data to not show image }}
+	{{> media }}
+</ul>
