Add yellow to the context colours for use in the keyframes

--- a/context/brand-context/springer/scss/10-settings/colors/default.scss
+++ b/context/brand-context/springer/scss/10-settings/colors/default.scss
@@ -17,7 +17,8 @@ $context--colors: (
 	'action-dull': #97bfd8,
 	'action-background-base': #ebf6ff,
 	'action-background-light': #f7fbfe,
-	'action-focus': #fc0
+	'action-focus': #fc0,
+	'yellow': #ff9
 );
 
 /**
