--- a/toolkits/global/packages/global-layout-cluster/demo/index.hbs
+++ b/toolkits/global/packages/global-layout-cluster/demo/index.hbs
@@ -1,6 +1,11 @@
-<div class="l-cluster">
-	<button class="u-button">Edit</button>
-	<button class="u-button">Save</button>
-	<button class="u-button">Delete</button>
-	<button class="u-button">Share</button>
-</div>
+<h2>Default</h2>
+
+{{> global-layout-cluster }}
+
+<h2>Horizontal alignment "center"</h2>
+
+{{> global-layout-cluster hAlign='center'}}
+
+<h2>Horizontal alignment "right"</h2>
+
+{{> global-layout-cluster hAlign='right'}}
