Fixes an issue where elements with z-index bleed through model
I came across an issue where I had some elements on the page that had
a z-index adn these were bleeding through the modal. To overcome this,
I added a z-index to the open when its in open state and increased the
index to a stupidly high number so its less likely other elements on
the page may ever bleed through again.

--- a/toolkits/springernature/packages/springernature-modal/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-modal/scss/50-components/enhanced.scss
@@ -28,7 +28,7 @@
 	&--open {
 		align-items: flex-start;
 		background-color: rgba(0, 0, 0, 0.4);
-		content: '';
+		content: "";
 		display: flex;
 		justify-content: center;
 		overflow-y: scroll;
@@ -37,6 +37,7 @@
 		position: fixed;
 		top: 0;
 		width: 100%;
+		z-index: 99999;
 	}
 
 	&__trigger {
