--- a/toolkits/global/packages/global-skip-link/scss/10-settings/_nature.scss
+++ b/toolkits/global/packages/global-skip-link/scss/10-settings/_nature.scss
@@ -7,7 +7,7 @@
 // Default setting
 @import 'default';
 
-$skip-link--font-size: 1.4rem;
+$skip-link--font-size: .875rem;
 $skip-link--color: white;
 $skip-link--hover-color: white;
 $skip-link--background-color: #069;
