--- a/toolkits/global/packages/global-skip-link/scss/10-settings/_springer.scss
+++ b/toolkits/global/packages/global-skip-link/scss/10-settings/_springer.scss
@@ -7,7 +7,7 @@
 // Default setting
 @import 'default';
 
-$skip-link--font-size: 1.4rem;
+$skip-link--font-size: .875rem;
 $skip-link--color: color('action-base');
 $skip-link--hover-color: color('action-base');
 $skip-link--background-color: color('action-background-light');
