--- a/toolkits/nature/packages/nature-footer/scss/10-settings/footer.scss
+++ b/toolkits/nature/packages/nature-footer/scss/10-settings/footer.scss
@@ -1,6 +1,6 @@
 $footer--background-color: greyscale(5);
 $footer--text-color: greyscale(70);
-$footer--font-size: 1.4rem;
+$footer--font-size: .875rem;
 $footer--line-height: 1.4;
 $footer--header-border-bottom: 1px solid greyscale(20);
 $footer--heading-color: greyscale(90);
