--- a/toolkits/nature/packages/nature-sort-by/scss/10-settings/sort-by.scss
+++ b/toolkits/nature/packages/nature-sort-by/scss/10-settings/sort-by.scss
@@ -2,7 +2,7 @@ $sort-by--menu-background-colour: #000;
 $sort-by--menu-border-colour: greyscale(5);
 $sort-by--menu-text-colour: greyscale(90);
 $sort-by--menu-padding: spacing(16) 0;
-$sort-by--menu-font-size: 1.4rem;
+$sort-by--menu-font-size: .875rem;
 $sort-by--menu-line-height: 1.2;
 $sort-by--button-font-weight: 700;
 $sort-by--button-svg-margin: spacing(16);
