--- a/toolkits/nature/packages/nature-header/scss/50-components/header-expander.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header-expander.scss
@@ -3,7 +3,7 @@
 	border-bottom: 1px solid greyscale(5); // non-js
 	color: greyscale(90);
 	padding: spacing(16) 0;
-	font-size: 1.4rem;
+	font-size: .875rem;
 	line-height: 1.2;
 
 	a {
@@ -35,7 +35,7 @@
 .c-header-expander__heading {
 	display: inline-block;
 	line-height: 1.4;
-	font-size: 2rem;
+	font-size: 1.25rem;
 	font-family: $context--font-family-sans;
 	font-weight: $context--font-weight-normal;
 }
