--- a/toolkits/springernature/packages/springernature-header/scss/50-components/core.scss
+++ b/toolkits/springernature/packages/springernature-header/scss/50-components/core.scss
@@ -19,7 +19,7 @@
 
 .c-header__logo-link {
 	text-decoration: none;
-	font-size: 25px;
+	font-size: 1.5625rem;
 }
 
 .c-header__site-logo {
@@ -34,17 +34,16 @@
 
 .c-header__journal-title {
 	@include media-query('md') {
-		font-size: 2.2rem;
+		font-size: 1.375rem;
 	}
 
 	@include media-query('lg') {
-		font-size: 2.7rem;
+		font-size: 1.6875rem;
 	}
 
 	font-family: $context--font-family-serif;
 	line-height: 4.6rem;
-	font-size: 2rem;
-	font-size: 1.5rem;
+	font-size: .9375rem;
 	color: color('black');
 }
 
