--- a/toolkits/springer/packages/springer-hero/scss/50-components/springer-hero.scss
+++ b/toolkits/springer/packages/springer-hero/scss/50-components/springer-hero.scss
@@ -26,7 +26,7 @@
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
-	padding: spacing(32);
+	padding: $hero--padding;
 }
 
 .c-hero__content ul {
